# hive-mind

./: .RESTART_HERE.md  .gitignore  CLUSTER_STATUS.md  COMPLETE.md  DUAL_MODE_SETUP.md  INVENTORY.md  JOURNEY.md  MCP_SERVER_READY.md  NATIVE_TRAINING_SETUP.md  PERFORMANCE.md  QUICKSTART.md  README.md  REDIS_INFO.md  ROADMAP.md  SESSION.md  SETUP_COMPLETE.md  STATUS.md  TEST.md  config.example.yaml  diagram_hivemind.py  hive-mind-http.service  hive-mind-mcp.service  hivecoder-learning.service  hivecoder-llm.service  hivemind_client.py  requirements.txt
docs/: ARCHITECTURE.md  CLUSTER_ARCHITECTURE.md  DEPLOYMENT.md  OPEN_INTERPRETER_INTEGRATION.md
hivemind_client/: __init__.py  client.py  tokenizer.py
learning-pipeline/: .gitignore  AUTOMATED_TRAINING.md  BENCHMARKS.md  BENCHMARK_SUMMARY.txt  BITSANDBYTES_FIX.md  DATASET_GUIDE.md  DEPLOYMENT.md  Dockerfile  FOUNDATION_MODEL_TRAINING.md  Makefile  PYTORCH_ROCM712_BUILD.md  README.md  SETUP_COMPLETE.txt  TRAINING_RESULTS.md  TRAINING_STABILITY_PLAN.md  docker-compose.yml  setup_cron.sh  setup_native_training.sh
mcp-server/: http_server.py  server.py
schemas/: redis-schema.md
scripts/: backup-to-nas.sh  hivecoder-backup.service  hivecoder-backup.timer  install-mcp-server.sh  setup-redis-local.sh  setup-redis-nas.sh  start-hivecoder.sh  test-connection.sh
scripts-archive/: add-hive-mind-mcp.sh  build-redis-cluster.sh
session-archives/: SESSION_2026-02-01.md  benchmark-hive-mind.py  run-llama-docker-30b.sh  (+4 more)
tiktoken/my_encodings/: README.md  pyproject.toml
tiktoken/my_encodings/tiktoken_ext/: my_encodings.py
(+18 files in other folders)
